# Robodog_GPT_Control

./: .gitignore  README.md
robodog_gpt/: CMakeLists.txt  package.xml  setup.sh
robodog_gpt/docker/: Dockerfile
robodog_gpt/launch/: robodog_launch.py
robodog_gpt/src/: audio.cpp  control.cpp  gpt_node.cpp
robodog_gpt/srv/: Audio.srv  Comms.srv
robodog_rqt/: package.xml  setup.cfg  setup.py
robodog_rqt/docker/: Dockerfile
robodog_rqt/launch/: launch.py
robodog_rqt/robodog_rqt/: gui_main.py
